manifests/cluster-addons/monitoring/grafana-operator/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: grafana

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-sre
        - matchLabels:
            app.kubernetes.io/name: prometheus-blackbox-exporter
        - matchLabels:
            app.kubernetes.io/name: grafana-operator
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/component: gateway
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9090'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tempo
      toPorts:
        - ports:
            - port: '3200'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/component: server
      toPorts:
        - ports:
            - port: '9000'
              protocol: TCP

    - toFQDNs:
        - matchName: 'grafana.com' # plugins
        - matchName: 'storage.googleapis.com' # plugins
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-operator
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana-operator

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app: grafana
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toFQDNs:
        - matchName: 'raw.githubusercontent.com' # dashboards
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
